2005-01-25  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_pdf_surface.c (_cairo_pdf_document_get_font): Chec
	pdf_font for NULL, not font.

2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* src/Makefile.am:
	Fix typo that made cairo-ft.h not get installed

2005-01-24  Carl Worth  <cworth@cworth.org>

	* AUTHORS: Add Shawn T. Amundson, Calum Robinson, and Owen Taylor.

	* src/Makefile.am: Conditionally install header files only for
	backends that are compiled. Thanks to Shawn T. Amundson
	<amundson@gtk.org>.

	* src/cairoint.h: 
	* src/cairo_color.c (_cairo_color_get_rgb): Qualify color argument
	as const. Closes bug #2336.

2005-01-23  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* src/cairo_ft_font.c (_get_load_flags): Protect switch on
	hintstyle with #ifdef FC_HINT_STYLE.

2005-01-23  Carl Worth  <cworth@cworth.org>

	* RELEASING: Add instructions for handling the new "-head" suffix
	of CAIRO_VERSION at release-time.

	* configure.in: Append "-head" to CAIRO_VERSION to indicate state
	between snapshots.

	* src/cairo_gstate.c: Add missing prototype for	_cairo_gstate_ensure_font.
	(_cairo_gstate_current_font): Add missing declaration so things
	compile again.

2005-01-21  Owen Taylor  <otaylor@redhat.com>

	* Call _cairo_gstate_ensure_font(). Don't reference
	the returned font.

2005-01-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_ft_font.c (_get_load_flags): Make dependence
	on FC_HINT_STYLE conditional. (reported by Abraham Egnor)

	* src/cairo_ft_font.c: Use FT_LOAD_MONOCHROME if 
	FT_LOAD_TARGET_MONO isn't defined for compatibility
	with older FreeType.

2005-01-16  Owen Taylor  <otaylor@redhat.com>

	Change cairo_font_t to refer to a font scaled to a particular
	output device resolution.

	* src/cairoint.h src/cairo_font.c src/cairo_ft_font.c
	src/cairo_xlib_surface.c src/cairo_pdf_surface.c src/cairo_gstate.c 
	src/cairo.c: Switch many internal methods from handling 
	cairo_unscaled_font_t and cairo_font_scale_t pairs to handling 