@@ -1,3 +1,8 @@
+2005-01-25  Carl Worth  <cworth@cworth.org>
+
+	* src/cairo_ft_font.c (_cairo_ft_font_show_glyphs): Fixed rounding
+	of glyph positioning.
+
 2005-01-25  Owen Taylor  <otaylor@redhat.com>
 
 	* src/cairo_pdf_surface.c (_cairo_pdf_document_get_font): Chec
